signin/signup integration

--- a/server/concept-build.conf
+++ b/server/concept-build.conf
@@ -1,5 +1,11 @@
-[DB]
-DSN=root:concbui1988@(127.0.0.1:3306)/concept-build
+[Oauth]
+DSN=root:paytm@197@(127.0.0.1:3306)/oauth
+MaxIdleConns=2
+MaxOpenConns=5
+Querylog=false
+
+[User]
+DSN=root:paytm@197@(127.0.0.1:3306)/build_concept
 MaxIdleConns=2
 MaxOpenConns=5
 Querylog=false
